--- a/st.css
+++ b/st.css
@@ -2,8 +2,8 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  padding-top: 40px;
 }
+
 /* Default styles already apply to light mode */
 body.light-mode {
   background-color: #f0f0f0;
@@ -55,7 +55,7 @@ body.dark-mode {
 }
 
 .hero-content {
-  max-width: 45%;
+  max-width: 40%;
   padding: 2rem;
   background-color: rgba(255, 255, 255, 0.85);
   border-radius: 8px;
@@ -113,6 +113,9 @@ body.dark-mode {
 
 /* ===== Responsive for Tablets and Mobile Devices ===== */
 @media (max-width: 768px) {
+  body {
+    padding-top: 140px; /* more space for taller header on mobile */
+  }
   .main-header {
     flex-direction: column;
    background-size: cover;
@@ -205,7 +208,7 @@ body.dark-mode .projects-section {
 .projects-section h2 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
-  color: inherit;
+   color: rgb(67, 65, 165);
 }
 
 .projects-grid {
@@ -227,4 +230,87 @@ body.dark-mode .projects-section {
 .project-item img:hover {
   transform: scale(1.05);
 }
+/*    FORM   */
+.contact-section {
+  padding: 4rem 2rem;
+  background-size: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  color: #fff;
+}
 
+.contact-section h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+   color: rgb(67, 65, 165);
+}
+
+.form-wrapper {
+  background-color:rgb(215, 200, 200); /* semi-transparent overlay */
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact-form label {
+  font-weight: bold;
+  text-align: left;
+  color: #6596ec;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  width: 90%;
+  box-sizing: border-box;
+}
+
+.submit-button {
+  background-color: #6596ec;
+  color: white;
+  padding: 10px;
+  font-size: large;
+
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #c20808;
+}
+/* DARK MODE FORM*/
+body.dark-mode .form-wrapper {
+  background-color:#222;
+}
+
+body.dark-mode .contact-form input,
+body.dark-mode .contact-form textarea {
+  background-color:  #4a0909;
+  color: #fff;
+}
+
+body.dark-mode .contact-form label {
+  color: #ddd;
+}
+
+body.dark-mode .submit-button {
+  background-color: #4a0909;
+}
+
+body.dark-mode .submit-button:hover {
+  background-color:#1f260d;
+}
